--- a/info.plist
+++ b/info.plist
@@ -98,27 +98,18 @@
 		</dict>
 	</array>
 	<key>readme</key>
-	<string>The Typefacts Special Characters Workflow
+	<string>Named CSS Colors
 
-Many special characters needed for good typography are hard to find, some are not even available on the keyboard at all.
-
-This workflow gives you access to these characters and pastes them right into your current application.
+This workflow gives you access to named CSS colors and their hex values and pastes them into the frontmost application
 
 ---
 
-This workflow was built by:
 
-Norman Posselt (@norman_posselt)
-Frank Rausch (@frankrausch)
-
----
-
-This workflow – excluding the Typefacts name, logo and branding – is licensed under the MIT License.
 
 
 MIT License
 
-Copyright (c) 2016 Typefacts.com
+Copyright (c) 2018 Fabian Morón Zirfas
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
 The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
@@ -144,7 +135,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 		</dict>
 	</dict>
 	<key>version</key>
-	<string>1.1.3</string>
+	<string>0.1.0</string>
 	<key>webaddress</key>
 	<string>https://fabianmoronzirfas.me</string>
 </dict>
